--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -74,13 +74,13 @@ section h3 {
   margin-bottom: 8px;
 }
 
-.activity-card ul {
+ul.participant {
   list-style-type: disc;
   margin-left: 20px;
   margin-top: 5px;
 }
 
-.activity-card li {
+ul.participant li {
   color: #555;
   font-size: 14px;
   margin-bottom: 2px;
